# dagster-template

./: .gitignore  README.md  pyproject.toml  workspace.yaml
demo-code-location/: Dockerfile_demo_code_location  Dockerfile_user_code  README.md  pyproject.toml  setup.cfg  setup.py
demo-code-location/demo_code_location/: definitions.py
demo-code-location/demo_code_location/assets/: __init__.py  assets.py
env/dev/: workspace.yaml
env/prod/: dagster.yaml  docker-compose.ports.yml  docker-compose.yaml  workspace.yaml
with_openai/: Dockerfile  pyproject.toml
