[project]
name = "demo_code_location"
version = "0.1.0"
description = "This is a demo code location."
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.11.*",
    "dagster-cloud",
    "dagster-duckdb",
    "geopandas",
    "pandas[parquet]",
    "shapely",
    "matplotlib",
    "duckdb>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "demo_code_location.definitions"
code_location_name = "demo_code_location"

[tool.setuptools.packages.find]
exclude=["demo_code_location_tests"]
