[project]
name = "demo_code_location"
version = "0.1.0"
description = "Demo Dagster code location with geospatial data processing"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Derrick Li", email = "derrickli.know@gmail.com" },
]
dependencies = [
    # Core Dagster
    "dagster>=1.11.0,<1.12.0",
    # Code location specific
    "dagster-cloud",
    "dagster-duckdb",
    "duckdb>=1.3.1",
    "geopandas",
    "matplotlib",
    "pandas[parquet]",
    "shapely",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "demo_code_location.definitions"
code_location_name = "demo_code_location"

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory
exclude = [
    "*_tests",
    "tests*",
    "demo_code_location_tests",
]
