[project]
name = "with_openai"
version = "0.1.0"
description = "Dagster code location with OpenAI integration"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.11.*",
    "dagster-aws",
    "dagster-openai",
    "faiss-cpu==1.8.0",
    "filelock",
    "langchain==0.3.7",
    "langchain-community==0.3.5",
    "langchain-openai==0.2.5",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "with_openai.definitions"
code_location_name = "with_openai"

[tool.setuptools.packages.find]
exclude=["with_openai_tests"]
